--- a/Login.html
+++ b/Login.html
@@ -12,7 +12,7 @@
             <div class="box blue">
                 <h3>Gradie</h3>
                 <p>Beautiful gradients in seconds</p>
-                <img src="images/iPhone Mockup.png">
+                <img src="iPhone Mockup.png">
             </div>
          <!--blue box end!-->
          
